Closed Bug 232456 Opened 22 years ago Closed 22 years ago

Escape key doesn't cancel Gtk alerts

Categories

(Core Graveyard :: Embedding: GTK Widget, defect)

x86
Linux
defect
Not set
minor

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: crispin, Assigned: crispin)

References

()

Details

Attachments

(1 file)

User-Agent: Build Identifier: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.6) Gecko/20040122 Galeon/1.3.12 According the the GNOME keynav guidelines, the "Cancel" button should be activated by the Escape key: http://developer.gnome.org/projects/gap/keynav/gtk_buttons.html For the GTK alerts (e.g. resubmit POST data on reload), this is not the case Reproducible: Always Steps to Reproduce: 1. Open TestGtkEmbed 2. Go to http://bugs.flowerday.cx/post.cgi 3. Click the button 4. Hit refresh (the resubmit post data dialog should appear) 5. press escape Actual Results: the dialog isn't cancelled Expected Results: The dialog should be cancelled, just like it would be if the cancel button was pressed.
Attached patch PatchSplinter Review
GtkDialogs already provide the ability to cancel the dialog when the Escape button is pressed, you just need to use the GTK_RESPONSE_CANCEL return code.
Attachment #140092 - Flags: superreview?(bryner)
Attachment #140092 - Flags: review?(blizzard)
Status: UNCONFIRMED → NEW
Ever confirmed: true
Attachment #140092 - Flags: superreview?(bryner) → superreview+
Attachment #140092 - Flags: review?(blizzard) → review+
Assignee: blizzard → mozilla
checked in
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: