Bug 232456 Escape key doesn't cancel Gtk alerts patch by Crispin Flowerday <mozilla@flowerday.cx> sr=bryner r=blizzard